<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="top"
    tools:context="com.example.rohanrodrigues.hackingedu1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#270ece"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_description"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_text"
        android:id = "@+id/textView"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="30sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/editText_description"
        android:layout_marginLeft="30sp"
        android:inputType=""/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/button_text"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="30sp"/>

</LinearLayout>
